--- a/admin/brands/add.html
+++ b/admin/brands/add.html
@@ -89,13 +89,13 @@
 <span class="text-muted-dark text-sm font-medium leading-normal">/</span>
 <a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal" href="index.html">Brands</a>
 <span class="text-muted-dark text-sm font-medium leading-normal">/</span>
-<span class="text-white text-sm font-medium leading-normal">Edit Brand</span>
+<span class="text-white text-sm font-medium leading-normal" id="breadcrumb-text">Add Brand</span>
 </div>
 <!-- PageHeading Component -->
 <div class="flex flex-wrap justify-between items-center gap-3 p-4 mb-4">
 <div class="flex min-w-72 flex-col gap-1">
-<h1 class="text-white text-4xl font-black leading-tight tracking-[-0.033em] font-display">Edit Brand</h1>
-<p class="text-muted-dark text-base font-normal leading-normal">Update the identity and catalog settings for this partner brand.</p>
+<h1 class="text-white text-4xl font-black leading-tight tracking-[-0.033em] font-display" id="page-title">Add New Brand</h1>
+<p class="text-muted-dark text-base font-normal leading-normal" id="page-description">Create a new partner brand and add it to the catalog.</p>
 </div>
 <div class="flex gap-3">
 <button class="flex items-center gap-2 px-4 py-2 bg-surface-dark hover:bg-border-dark text-white rounded-lg transition-all text-sm font-bold border border-border-dark">
@@ -105,7 +105,7 @@
 </div>
 </div>
 <!-- Form Section -->
-<div class="space-y-8">
+<form id="brand-form" class="space-y-8">
 <!-- General Info Card -->
 <div class="bg-surface-dark/40 border border-border-dark rounded-xl p-6">
 <h2 class="text-white text-[22px] font-bold leading-tight tracking-[-0.015em] mb-6 flex items-center gap-2">
@@ -115,16 +115,16 @@
 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 <!-- TextField Component -->
 <div class="flex flex-col gap-2">
-<label class="text-white text-sm font-semibold">Brand Name</label>
-<input class="form-input w-full rounded-lg text-white border border-border-dark bg-background-dark/50 focus:border-primary focus:ring-1 focus:ring-primary h-12 px-4 text-base font-normal placeholder:text-muted-dark" type="text" value="VAPORESSO"/>
+<label class="text-white text-sm font-semibold">Brand Name *</label>
+<input name="brand-name" id="brand-name" class="form-input w-full rounded-lg text-white border border-border-dark bg-background-dark/50 focus:border-primary focus:ring-1 focus:ring-primary h-12 px-4 text-base font-normal placeholder:text-muted-dark" type="text" placeholder="e.g. Suprem-e, Vaporart" required/>
 </div>
 <div class="flex flex-col gap-2">
-<label class="text-white text-sm font-semibold">Legal Company Name</label>
-<input class="form-input w-full rounded-lg text-white border border-border-dark bg-background-dark/50 focus:border-primary focus:ring-1 focus:ring-primary h-12 px-4 text-base font-normal placeholder:text-muted-dark" placeholder="e.g. Smoore Technology Limited" type="text"/>
+<label class="text-white text-sm font-semibold">Website URL (Optional)</label>
+<input name="website" id="website" class="form-input w-full rounded-lg text-white border border-border-dark bg-background-dark/50 focus:border-primary focus:ring-1 focus:ring-primary h-12 px-4 text-base font-normal placeholder:text-muted-dark" placeholder="e.g. goldwave.it/" type="url"/>
 </div>
 <div class="flex flex-col gap-2 md:col-span-2">
 <label class="text-white text-sm font-semibold">Brand Description/Bio</label>
-<textarea class="form-input w-full rounded-lg text-white border border-border-dark bg-background-dark/50 focus:border-primary focus:ring-1 focus:ring-primary p-4 text-base font-normal placeholder:text-muted-dark resize-none" rows="4">VAPORESSO was created in 2015 by parent company SMOORE with a goal of establishing a smoke-free world while raising the quality of life for our users through continuous innovation.</textarea>
+<textarea name="description" id="description" class="form-input w-full rounded-lg text-white border border-border-dark bg-background-dark/50 focus:border-primary focus:ring-1 focus:ring-primary p-4 text-base font-normal placeholder:text-muted-dark resize-none" rows="4" placeholder="Enter brand description..."></textarea>
 </div>
 </div>
 </div>
@@ -136,68 +136,86 @@
                             </h2>
 <div class="flex flex-col md:flex-row gap-8 items-start">
 <div class="flex flex-col items-center gap-4">
-<p class="text-white text-sm font-semibold w-full">Current Logo</p>
-<div class="size-32 rounded-xl bg-background-dark border-2 border-dashed border-border-dark flex items-center justify-center overflow-hidden group relative">
+<p class="text-white text-sm font-semibold w-full">Logo Preview</p>
+<div class="size-32 rounded-xl bg-background-dark border-2 border-dashed border-border-dark flex items-center justify-center overflow-hidden group relative" id="logo-preview">
 <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 flex items-center justify-center transition-opacity cursor-pointer">
 <span class="material-symbols-outlined text-white text-3xl">edit</span>
 </div>
-<img class="w-24 h-24 object-contain" data-alt="Vaporesso brand logo preview" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCjS1sce6tqNWY-Kecsf1j7jeu6Z1GZWVYa3uVISn565-K7kW-UTzVJrYY8GAioi9rUs_nhBTHvcs_RN4wz0m3fg6bhdFg2r3Bkn15jULzMMyZIvQ-jG6KSEVKelufDgUU5UB3SJH72lCqwB1wEq4EeD1oXmrQLndRHxfVC4StkjXsDBCA6DQzZr14YrFmVyenEjh9j131kKfwCKjnlU-DiwbRXOedHw2sjIXmXxhMVFle5gOXvP6rz_3sJoTWrkNaDMifKVDxGk6k"/>
+<img id="logo-preview-img" class="w-24 h-24 object-contain hidden" alt="Brand logo preview"/>
+<span class="text-muted-dark text-sm">No logo</span>
 </div>
 <p class="text-muted-dark text-xs">SVG, PNG or JPG. Max 2MB.</p>
 </div>
 <div class="flex-1 w-full">
-<p class="text-white text-sm font-semibold mb-2">Upload New Logo</p>
+<p class="text-white text-sm font-semibold mb-2">Logo URL</p>
+<input type="text" name="logo-url" id="logo-url" class="form-input w-full rounded-lg text-white border border-border-dark bg-background-dark/50 focus:border-primary focus:ring-1 focus:ring-primary h-12 px-4 text-base font-normal placeholder:text-muted-dark mb-2" placeholder="/images/brands/brand_logo.png"/>
+<p class="text-muted-dark text-xs mb-4">Or upload a file:</p>
 <div class="w-full border-2 border-dashed border-border-dark rounded-xl p-8 flex flex-col items-center justify-center bg-background-dark/20 hover:bg-background-dark/40 hover:border-primary/50 transition-all cursor-pointer">
-<span class="material-symbols-outlined text-4xl text-muted-dark mb-2">cloud_upload</span>
+<input type="file" id="logo-upload" accept="image/*" class="hidden"/>
+<label for="logo-upload" class="cursor-pointer text-center">
+<span class="material-symbols-outlined text-4xl text-muted-dark mb-2 block">cloud_upload</span>
 <p class="text-white text-base font-medium">Click to upload or drag and drop</p>
 <p class="text-muted-dark text-sm">Recommended size: 512x512px</p>
+</label>
 </div>
 </div>
 </div>
 </div>
-<!-- Catalog Categories Card -->
+<!-- Catalog Sections Card -->
 <div class="bg-surface-dark/40 border border-border-dark rounded-xl p-6">
 <h2 class="text-white text-[22px] font-bold leading-tight tracking-[-0.015em] mb-2 flex items-center gap-2">
 <span class="material-symbols-outlined text-primary">category</span>
-                                Catalog Categories
+                                Catalog Sections
                             </h2>
-<p class="text-muted-dark text-sm mb-6">Define which sections this brand will appear in.</p>
-<div class="flex flex-wrap gap-3 mb-6">
-<!-- Existing Tags -->
-<div class="flex items-center gap-2 bg-primary px-3 py-1.5 rounded-full text-black text-sm font-bold">
-                                    Hardware
-                                    <button class="hover:bg-black/10 rounded-full flex items-center"><span class="material-symbols-outlined text-sm">close</span></button>
+<p class="text-muted-dark text-sm mb-6">Select which catalog section(s) this brand will appear in.</p>
+<div class="space-y-4 mb-6">
+<div class="flex flex-col gap-2">
+<label class="text-white text-sm font-semibold">Primary Section *</label>
+<select id="primary-section" class="form-select w-full rounded-lg text-white border border-border-dark bg-background-dark/50 focus:border-primary focus:ring-1 focus:ring-primary h-12 px-4 text-base font-normal" required>
+<option value="">Select a section...</option>
+<option value="cat_liquidi">Liquidi - E-liquides et arômes</option>
+<option value="cat_dispositivi">Dispositivi - Cigarettes électroniques et matériel</option>
+</select>
 </div>
-<div class="flex items-center gap-2 bg-primary px-3 py-1.5 rounded-full text-black text-sm font-bold">
-                                    Mods
-                                    <button class="hover:bg-black/10 rounded-full flex items-center"><span class="material-symbols-outlined text-sm">close</span></button>
+<div class="flex flex-col gap-2">
+<label class="text-white text-sm font-semibold">Additional Sections (Optional)</label>
+<div class="flex flex-wrap gap-3" id="selected-sections">
+<!-- Selected sections will appear here -->
 </div>
-<div class="flex items-center gap-2 bg-primary px-3 py-1.5 rounded-full text-black text-sm font-bold">
-                                    Tanks &amp; Coils
-                                    <button class="hover:bg-black/10 rounded-full flex items-center"><span class="material-symbols-outlined text-sm">close</span></button>
+<select id="add-section" class="form-select w-full rounded-lg text-white border border-border-dark bg-background-dark/50 focus:border-primary focus:ring-1 focus:ring-primary h-12 px-4 text-base font-normal">
+<option value="">Add another section...</option>
+<option value="cat_liquidi">Liquidi</option>
+<option value="cat_dispositivi">Dispositivi</option>
+</select>
 </div>
-<div class="flex items-center gap-2 bg-primary/20 border border-primary/30 px-3 py-1.5 rounded-full text-primary text-sm font-bold">
-                                    Pod Systems
-                                    <button class="hover:bg-primary/20 rounded-full flex items-center"><span class="material-symbols-outlined text-sm">close</span></button>
 </div>
-<!-- Add Tag Button -->
-<button class="flex items-center gap-1 bg-surface-dark hover:bg-border-dark px-3 py-1.5 rounded-full text-white text-sm font-medium border border-border-dark transition-colors">
+</div>
+<!-- Product Lines Card -->
+<div class="bg-surface-dark/40 border border-border-dark rounded-xl p-6">
+<h2 class="text-white text-[22px] font-bold leading-tight tracking-[-0.015em] mb-2 flex items-center gap-2">
+<span class="material-symbols-outlined text-primary">inventory_2</span>
+                                Product Lines
+                            </h2>
+<p class="text-muted-dark text-sm mb-6">Add product lines for this brand. You can add lines later if needed.</p>
+<div id="product-lines-container" class="space-y-4 mb-4">
+<!-- Product lines will be added here dynamically -->
+</div>
+<button type="button" id="add-line-btn" class="flex items-center gap-2 px-4 py-2 bg-surface-dark hover:bg-border-dark text-white rounded-lg transition-all text-sm font-bold border border-border-dark">
 <span class="material-symbols-outlined text-sm">add</span>
-                                    Add Category
-                                </button>
-</div>
+                                Add Product Line
+                            </button>
 </div>
 <!-- Action Buttons -->
 <div class="flex items-center justify-end gap-4 pt-4 border-t border-border-dark">
-<button class="px-6 py-3 rounded-lg text-white font-bold text-sm bg-transparent hover:bg-surface-dark transition-colors">
+<button type="button" class="px-6 py-3 rounded-lg text-white font-bold text-sm bg-transparent hover:bg-surface-dark transition-colors">
                                 Cancel
                             </button>
-<button class="px-8 py-3 rounded-lg bg-primary hover:bg-primary/90 text-black font-extrabold text-sm shadow-lg shadow-primary/10 transition-all flex items-center gap-2">
+<button type="submit" class="px-8 py-3 rounded-lg bg-primary hover:bg-primary/90 text-black font-extrabold text-sm shadow-lg shadow-primary/10 transition-all flex items-center gap-2">
 <span class="material-symbols-outlined text-[20px]">save</span>
-                                Save Brand Changes
+                                Save Brand
                             </button>
 </div>
-</div>
+</form>
 <!-- Footer Spacer -->
 <div class="h-20"></div>
 </div>
@@ -217,4 +235,15 @@
 <span class="material-symbols-outlined text-sm">close</span>
 </button>
 </div>
+<!-- Firebase SDK (Legacy for Realtime Database) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
+
+<!-- Catalog Services -->
+<script src="../../src/js/services/firebase-config.js"></script>
+<script src="../../src/js/services/firebase-catalog-service.js"></script>
+<script src="../../src/js/services/catalog-service.js"></script>
+<script src="../../src/js/modules/catalog-init.js"></script>
+<script src="../../src/js/admin/brand-form.js"></script>
 </body></html>
