--- a/public/about.html
+++ b/public/about.html
@@ -22,10 +22,10 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#F2EA7E",
-                        "background-light": "#1a1a1a",
-                        "background-dark": "#0A0A0A",
-                        "charcoal": "#121212",
+                        "primary": "#F8ED70",
+                        "background-light": "#333333",
+                        "background-dark": "#000000",
+                        "charcoal": "#333333",
                     },
                     fontFamily: {
                         "display": ["Plus Jakarta Sans", "sans-serif"]
@@ -37,12 +37,12 @@
     </script>
     <style type="text/tailwindcss">
         :root {
-            --primary-color: #F2EA7E;
-            --bg-dark: #0A0A0A;
+            --primary-color: #F8ED70;
+            --bg-dark: #000000;
         }
         body { font-family: 'Plus Jakarta Sans', sans-serif; }
         .glass-effect {
-            background: rgba(10, 10, 10, 0.85);
+            background: rgba(0, 0, 0, 0.85);
             backdrop-filter: blur(16px);
             -webkit-backdrop-filter: blur(16px);
         }
@@ -51,7 +51,7 @@
             letter-spacing: -0.02em;
         }
         .accent-glow {
-            box-shadow: 0 0 20px rgba(242, 234, 126, 0.2);
+            box-shadow: 0 0 20px rgba(248, 237, 112, 0.2);
         }
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
@@ -60,13 +60,20 @@
 </head>
 
 <body class="bg-background-dark text-white transition-colors duration-300">
-<header class="fixed top-0 w-full z-50 border-b border-white/5 glass-effect">
+<!-- Barre de message pour les visiteurs -->
+<nav class="fixed top-0 w-full z-[60] bg-primary/10 border-b border-primary/20 backdrop-blur-sm">
+    <div class="max-w-[1440px] mx-auto px-6 lg:px-20 py-2.5">
+        <div class="flex items-center justify-center gap-2 text-xs font-bold uppercase tracking-widest text-primary">
+            <span class="material-symbols-outlined text-sm">info</span>
+            <p class="text-center">Benvenuto su LIQUIDO - Scopri la nostra selezione premium di prodotti per il vaping</p>
+        </div>
+    </div>
+</nav>
+<header class="fixed top-[40px] w-full z-50 border-b border-white/5 glass-effect">
 <div class="max-w-[1440px] mx-auto px-6 lg:px-20 h-20 flex items-center justify-between">
 <div class="flex items-center gap-12">
             <a href="index.html" class="flex items-center gap-3 cursor-pointer hover:opacity-80 transition-opacity">
-                <div class="size-10 bg-primary rounded-sm flex items-center justify-center text-background-dark">
-                    <span class="material-symbols-outlined font-bold">water_drop</span>
-                </div>
+                <img src="../assets/images/Goccia LIQUIDO/GOCCIA Y_W.png" alt="LIQUIDO Logo" class="h-10 object-contain"/>
                 <h2 class="text-2xl text-bold-modern tracking-tighter uppercase">LIQUIDO <span class="text-primary/80 font-normal">VAPE SHOP</span></h2>
             </a>
 <nav class="hidden md:flex items-center gap-8">
@@ -89,7 +96,7 @@
 </div>
 </div>
 </header>
-<main class="pt-20">
+<main class="pt-[120px]">
             <!-- Hero Section -->
             <section class="relative">
                 <div class="flex min-h-[60vh] flex-col gap-6 bg-cover bg-fixed bg-center bg-no-repeat items-center justify-center p-8 text-center"
@@ -285,12 +292,12 @@
                     <h4 class="font-bold text-lg mb-6 dark:text-white">Contatti</h4>
                     <ul class="space-y-4 text-sm text-slate-500 dark:text-[#baba9c]">
                         <li class="flex gap-3"><span class="material-symbols-outlined text-primary text-sm">mail</span>
-                            contact@liquido.com</li>
+                            info.vaporoom@gmail.com</li>
                         <li class="flex gap-3"><span class="material-symbols-outlined text-primary text-sm">phone</span>
-                            +1 (555) 123-4567</li>
+                            +39 379 134 5367</li>
                         <li class="flex gap-3"><span
-                                class="material-symbols-outlined text-primary text-sm">location_on</span> 123 Vapor Ave,
-                            Metro City</li>
+                                class="material-symbols-outlined text-primary text-sm">location_on</span> via Adige 43C,
+                            00015 - Monterotondo (Rm)</li>
                     </ul>
                     <div class="mt-8">
                         <p class="text-xs text-red-500 font-bold uppercase tracking-widest">Accesso Limitato per Età</p>
@@ -306,6 +313,7 @@
             </div>
         </footer>
     </div>
+    <script src="../src/js/modules/age-verification.js"></script>
 </body>
 
 </html>
